--- a/www/nginx.conf
+++ b/www/nginx.conf
@@ -29,6 +29,10 @@ http {
   add_header Referrer-Policy no-referrer always;
   add_header X-Content-Type-Options nosniff always;
 
+  # upstream auth_backend {
+  #     server 127.0.0.1:8000; # Your authentication service
+  # }
+
   server {
 
     listen 8080;
@@ -52,12 +56,12 @@ http {
     root /usr/share/nginx/html;
 
     location /static {                         
-      alias /var/www/fastinvites.com/static/;
+      alias /var/www/com/static/;
       expires modified +1w;                        
     }
 
-    location / {
-        proxy_pass http://fastinvites-app:8000;
+    location /accounts/ {
+        proxy_pass http://auth:8000;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -67,6 +71,47 @@ http {
         # we don't want nginx trying to do something clever with
         # redirects, we set the Host: header above already.
         proxy_redirect off;
+    }
+
+    location /api/ {
+        auth_request /auth;
+        auth_request_set $authorization_key $upstream_http_x_authorization_key; # Capture X-User-ID header
+        # auth_request_set $user_role $upstream_http_x_user_role; # Capture X-User-Role header
+
+        proxy_set_header X-Authorization-Key $authorization_key;
+        # proxy_set_header X-Authenticated-User-Role $user_role;
+
+        proxy_pass http://api:3000;
+    }
+
+    location / {
+        proxy_pass http://app:80;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Origin 'http://localhost:8080';
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
+        proxy_redirect off;
+    }
+
+    location = /auth {
+        internal; # This location is only accessible via internal Nginx requests
+        proxy_pass_request_body off;
+        proxy_set_header Content-Length "";
+        proxy_set_header X-Original-URI $request_uri; # Pass original URI to auth service
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Origin 'http://localhost:8080';
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
+        proxy_redirect off;
+        proxy_pass http://auth:8000/auth/; # Your auth service endpoint
     }
 
   }
