--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,28 @@
 amqp==5.3.1
-asgiref==3.8.1
+asgiref==3.9.1
 autopep8==2.3.2
 billiard==4.2.1
-Brotli==1.1.0
-celery==5.4.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
+celery==5.5.3
+click==8.2.1
 click-didyoumean==0.3.1
-click-plugins==1.1.1
+click-plugins==1.1.1.2
 click-repl==0.3.0
-cssselect2==0.8.0
 Django==5.2.6
-django-debug-toolbar==5.2.0
-django-weasyprint==2.4.0
-flower==2.0.1
-fonttools==4.58.5
+django-debug-toolbar==6.0.0
+django-redis==6.0.0
+djangorestframework==3.16.1
 gunicorn==23.0.0
-hiredis==3.2.1
-humanize==4.12.3
-idna==3.10
-kombu==5.4.2
+kombu==5.5.4
 packaging==25.0
-pika==1.3.2
-pillow==11.1.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.50
-psycopg==3.2.9
-pycodestyle==2.12.1
-pycparser==2.22
-pydyf==0.11.0
-pyphen==0.17.2
+prompt_toolkit==3.0.52
+psycopg==3.2.10
+psycopg-pool==3.2.6
+pycodestyle==2.14.0
 python-dateutil==2.9.0.post0
-pytz==2025.2
-qrcode==8.0
 redis==6.4.0
-requests==2.32.3
 six==1.17.0
 sqlparse==0.5.3
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tornado==6.5.2
-tzdata==2025.1
-urllib3==2.3.0
+typing_extensions==4.15.0
+tzdata==2025.2
 vine==5.1.0
 wcwidth==0.2.13
-weasyprint==65.1
-webencodings==0.5.1
-zopfli==0.2.3.post1
