--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -17,4 +17,4 @@ WORKDIR /opt/app
 
 COPY --from=builder /opt/app ./
 
-CMD [ "node", "./dist/main.js" ]
+CMD [ "NODE_ENV=production", "node", "./dist/main.js" ]
