--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -120,10 +120,10 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '22.x'
           cache: 'npm' # Cache npm dependencies
       - name: Install dependencies
         run: npm ci # Use npm ci for clean installations based on package-lock.json
